--- a/kernel/configsKERNEL/config.json
+++ b/kernel/configsKERNEL/config.json
@@ -6,7 +6,7 @@
     "algoritmo_planificacion"   : "FIFO",
     "quantum" : 2000,
     "log_level": "DEBUG",
-    "mensaje": "Hola, soy un mensaje de prueba"
+    "mensaje": "Hola, soy el kernel"
 }
 
 
