--- a/kernel/configsKERNEL/config.json
+++ b/kernel/configsKERNEL/config.json
@@ -1,12 +1,12 @@
 {
-    "ip_memoria": "127.0.0.1",
+    "puerto"  : 8001,
+    "ip_memoria": "128.0.0.1",
     "puerto_memoria": 8002,
     "ip_cpu"  : "127.0.0.1",
-    "puerto_cpu": 8002,
+    "puerto_cpu": 8004,
     "algoritmo_planificacion"   : "FIFO",
     "quantum" : 2000,
-    "log_level": "DEBUG",
-    "mensaje": "Hola, soy el kernel"
+    "log_level": "DEBUG"
 }
 
 
