Casi corregido RR

--- a/kernel/configsKERNEL/config.json
+++ b/kernel/configsKERNEL/config.json
@@ -4,7 +4,7 @@
     "puerto_memoria": 8002,
     "ip_cpu"  : "127.0.0.1",
     "puerto_cpu": 8004,
-    "algoritmo_planificacion"   : "PRIORIDADES",
+    "algoritmo_planificacion"   : "COLASMULTINIVEL",
     "quantum" : 3000,
     "log_level": "DEBUG"
 }
