--- a/kernel/configsKERNEL/config.json
+++ b/kernel/configsKERNEL/config.json
@@ -4,8 +4,8 @@
     "puerto_memoria": 8002,
     "ip_cpu"  : "127.0.0.1",
     "puerto_cpu": 8004,
-    "algoritmo_planificacion"   : "FIFO",
-    "quantum" : 3000,
+    "algoritmo_planificacion"   : "COLASMULTINIVEL",
+    "quantum" : 1750,
     "log_level": "DEBUG"
 }
 
