--- a/memoria/configsMemoria/config.json
+++ b/memoria/configsMemoria/config.json
@@ -9,9 +9,9 @@
     "port_cpu": 8004,
     "ip_filesystem": "127.0.0.1",
     "port_filesystem": 8006,
-    "scheme": "DINAMICAS",
+    "scheme": "FIJAS",
     "search_algorithm": "FIRST",
-    "partitions": [512, 252, 128, 56, 16],
+    "partitions": [32,32,32,32,32,32,32,32],
     "log_level": "TRACE"
 } 
 
