--- a/kernel/configsKERNEL/config.json
+++ b/kernel/configsKERNEL/config.json
@@ -5,8 +5,10 @@
     "ip_cpu"  : "127.0.0.1",
     "puerto_cpu": 8004,
     "algoritmo_planificacion"   : "CMN",
-    "quantum" : 1750,
-    "log_level": "DEBUG"
+    "quantum" : 3750,
+    "log_level": "DEBUG",
+    "size_inicial": 32,
+    "archivo_inicial": "RECURSOS_MUTEX_PROC"
 }
 
 
