--- a/memoria/configsMemoria/config.json
+++ b/memoria/configsMemoria/config.json
@@ -9,7 +9,7 @@
     "port_cpu": 8004,
     "ip_filesystem": "127.0.0.1",
     "port_filesystem": 8006,
-    "scheme": "FIJAS",
+    "scheme": "DINAMICAS",
     "search_algorithm": "FIRST",
     "partitions": [32,32,32,32,32,32,32,32],
     "log_level": "TRACE"
